--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
+    "react-delay-link": "^1.1.4",
     "react-dom": "^16.13.1",
     "react-logger": "^1.1.0",
     "react-redux": "^7.2.1",
