--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-countdown": "^2.2.1",
     "react-delay-link": "^1.1.4",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.2",
