--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
