--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rq",
+  "homepage": "https://reactivequiz.com/",
+  "name": "reactivequiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
