--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://reactivequiz.com/",
+  "home": "https://reactivequiz.com/",
   "name": "reactivequiz",
   "version": "0.1.0",
   "private": true,
